# mqtt2http

./: .gitignore  README.md  createEnv.py  index.html  mqtt2http.service  pyproject.toml  server.py
mqtt2http/: httpSrv.py  mqttClt.py
