[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt2http"
authors = [
    { name = "iiidefix", email = "iiidefix@gmail.com" },
]
description = "A simple MQTT to HTTP bridge"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mqtt", "http", "bridge"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["paho-mqtt", "requests"]
version = "0.0.1"

[tool.setuptools]
packages = ["mqtt2http"]
# [project.scripts]
# my-script = "my_package.module:function"
